spacing corrections

--- a/src/style.css
+++ b/src/style.css
@@ -37,18 +37,16 @@ footer {
   );
 }
 .phototable {
-  padding: 100px auto;
+  padding: 100px;
 }
 
 .photocol {
-  padding: 0 20px;
+  padding: 20px;
 }
 
 .photoone {
   display: block;
   margin: 0 auto;
-
-  padding-bottom: 40px;
 }
 .threeimgrow {
   width: 100%;
@@ -58,8 +56,12 @@ footer {
   padding-top: 32px;
   margin: 0 auto;
 }
-
 .tutorialphoto {
+  border-radius: 12px;
+}
+.tutorialsection h2 {
+  font-size: 36px;
+  line-height: 49px;
 }
 
 @media (max-width: 820px) {
